

                              Kiji Schema Shell Release Notes

Version 1.2.0
  * DDLSHELL-44. Plugins can now define commands that execute Java subprocesses.
      You can run a Java subprocess with the following commands:
      MODULE 'fork';
      FORK JVM 'com.example.MyMainClass' 'arg1' 'arg2' 'arg3...';
  * DDLSHELL-43. Add 'USE JAR INFILE...' command to add a collection of paths
      to jar libraries to the environment. These will be provided to Java
      subprocesses.
  * DDLSHELL-45. Support extended environment attributes for dynamically-loaded
      modules through EnvironmentPlugin.

Version 1.1.0
  * DDLSHELL-33. DROP INSTANCE and DROP TABLE commands run on the shell require
      the user to type 'yes' at a prompt. API usage and scripts are not
      affected.
  * DDLSHELL-20. Add CREATE INSTANCE <instance> and DROP INSTANCE <instance>
      commands.
  * DDLSHELL-19. Prevent program crash when you operate on a Kiji instance
      that doesn't exist.
  * DDLSHELL-24. Add support for NUMREGIONS table property, specifying
      the initial region count.
  * DDLSHELL-28. Add support for Layout version 1.2 features.
      Supports properties added in https://jira.kiji.org/browse/SCHEMA-283.
  * Requires KijiSchema 1.1.0+.

Version 1.0.0
  * DDLSHELL-27. Add audience and stability annotations.
  * DDLSHELL-25. Support for language plugin modules.

Version 1.0.0-rc5
  * DDLSHELL-26. Fix bug in classpath formation.
  * DDLSHELL-21. Shell refuses to modify table layouts created by
      newer versions of KijiSchema.
  * DDLSHELL-22. Change default row key format to HASH PREFIXED(2).
  * DDLSHELL-17. Improve default top-level error message.
  * DDLSHELL-15. Support for composite, formatted row keys.
  * DDLSHELL-18. Refactor to use Avro builders throughout.

Version 1.0.0-rc4
  * DDLSHELL-16. Fix link to layout definition language.
  * SCHEMA-197. Update layout protocol to 'layout-1.1'.
  * DDLSHELL-11. Add Client API object to enable programmatic access.